{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 236,
  "lineage": "95780400-68ff-5e62-2a4b-81bd4fa72a20",
  "resources": [
    {
      "module": "module.eip_module[\"eip1\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-070f7b34fc5cf3d88",
            "association_id": "eipassoc-093e1ff79f252ae74",
            "domain": "vpc",
            "id": "eipalloc-070f7b34fc5cf3d88",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-03f8d9847ee7c5725",
            "private_dns": "ip-192-168-1-8.eu-north-1.compute.internal",
            "private_ip": "192.168.1.8",
            "public_dns": "ec2-16-16-232-155.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.16.232.155",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip1"
            },
            "tags_all": {
              "Name": "eip1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eip_module[\"eip2\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d49e0ad1410fbf08",
            "association_id": "eipassoc-0bfda1f2f21578945",
            "domain": "vpc",
            "id": "eipalloc-0d49e0ad1410fbf08",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-03a96bc0d36a37d7a",
            "private_dns": "ip-192-168-2-12.eu-north-1.compute.internal",
            "private_ip": "192.168.2.12",
            "public_dns": "ec2-13-50-126-194.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.50.126.194",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip2"
            },
            "tags_all": {
              "Name": "eip2"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eip_module[\"eip3\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0012bb770a54c0f8a",
            "association_id": "eipassoc-0965f51c5f7af4ec8",
            "domain": "vpc",
            "id": "eipalloc-0012bb770a54c0f8a",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-05f93af9ac52bb619",
            "private_dns": "ip-192-168-1-210.eu-north-1.compute.internal",
            "private_ip": "192.168.1.210",
            "public_dns": "ec2-16-16-249-114.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.16.249.114",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip3"
            },
            "tags_all": {
              "Name": "eip3"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eip_module[\"eip4\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d7611ac8d59f581",
            "association_id": "eipassoc-04b4feff47c4fac9c",
            "domain": "vpc",
            "id": "eipalloc-00d7611ac8d59f581",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0d89978bd3b08e757",
            "private_dns": "ip-192-168-2-249.eu-north-1.compute.internal",
            "private_ip": "192.168.2.249",
            "public_dns": "ec2-16-16-46-91.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.16.46.91",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip4"
            },
            "tags_all": {
              "Name": "eip4"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.internet_gateway[\"IGW01\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:577020030402:internet-gateway/igw-0df2ace38efff9280",
            "id": "igw-0df2ace38efff9280",
            "owner_id": "577020030402",
            "vpc_id": "vpc-093291a94ce50bee7"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway[\"NGW1\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-070f7b34fc5cf3d88",
            "association_id": "eipassoc-093e1ff79f252ae74",
            "connectivity_type": "public",
            "id": "nat-084b2bc92f2a7f3e4",
            "network_interface_id": "eni-03f8d9847ee7c5725",
            "private_ip": "192.168.1.8",
            "public_ip": "16.16.232.155",
            "subnet_id": "subnet-0bc0350b143f05aa6",
            "tags": {
              "Name": "NGW1"
            },
            "tags_all": {
              "Name": "NGW1"
            }
          },
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway[\"NGW2\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d49e0ad1410fbf08",
            "association_id": "eipassoc-0bfda1f2f21578945",
            "connectivity_type": "public",
            "id": "nat-069a665000ca224cb",
            "network_interface_id": "eni-03a96bc0d36a37d7a",
            "private_ip": "192.168.2.12",
            "public_ip": "13.50.126.194",
            "subnet_id": "subnet-02ef6811f63d49e76",
            "tags": {
              "Name": "NGW2"
            },
            "tags_all": {
              "Name": "NGW2"
            }
          },
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway[\"NGW3\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0012bb770a54c0f8a",
            "association_id": "eipassoc-0965f51c5f7af4ec8",
            "connectivity_type": "public",
            "id": "nat-02f927922d8aa5146",
            "network_interface_id": "eni-05f93af9ac52bb619",
            "private_ip": "192.168.1.210",
            "public_ip": "16.16.249.114",
            "subnet_id": "subnet-0bc0350b143f05aa6",
            "tags": {
              "Name": "NGW3"
            },
            "tags_all": {
              "Name": "NGW3"
            }
          },
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway[\"NGW4\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00d7611ac8d59f581",
            "association_id": "eipassoc-04b4feff47c4fac9c",
            "connectivity_type": "public",
            "id": "nat-0628a4727ec126d82",
            "network_interface_id": "eni-0d89978bd3b08e757",
            "private_ip": "192.168.2.249",
            "public_ip": "16.16.46.91",
            "subnet_id": "subnet-02ef6811f63d49e76",
            "tags": {
              "Name": "NGW4"
            },
            "tags_all": {
              "Name": "NGW4"
            }
          },
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_asso[\"RTAss01\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb38a91de4cecf4d",
            "route_table_id": "rtb-0bffbd62c8b5e6163",
            "subnet_id": "subnet-0bc0350b143f05aa6"
          },
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.internet_gateway.aws_internet_gateway.gw",
            "module.nat_gateway.aws_nat_gateway.gw",
            "module.route_table_module.aws_route_table.example",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_asso[\"RTAss02\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0100ce38564fbe7cf",
            "route_table_id": "rtb-0bffbd62c8b5e6163",
            "subnet_id": "subnet-02ef6811f63d49e76"
          },
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.internet_gateway.aws_internet_gateway.gw",
            "module.nat_gateway.aws_nat_gateway.gw",
            "module.route_table_module.aws_route_table.example",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_asso[\"RTAss03\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0488602790b4185ef",
            "route_table_id": "rtb-067496167b199555c",
            "subnet_id": "subnet-08ae600c4d516dcb5"
          },
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.internet_gateway.aws_internet_gateway.gw",
            "module.nat_gateway.aws_nat_gateway.gw",
            "module.route_table_module.aws_route_table.example",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_asso[\"RTAss04\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f50fb12c1cdd993",
            "route_table_id": "rtb-093ef224fe4957aa5",
            "subnet_id": "subnet-0ebdec988d87b09aa"
          },
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.internet_gateway.aws_internet_gateway.gw",
            "module.nat_gateway.aws_nat_gateway.gw",
            "module.route_table_module.aws_route_table.example",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_asso[\"RTAss05\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05663f5101108a874",
            "route_table_id": "rtb-0f6f401a2c976576a",
            "subnet_id": "subnet-070c50cdba156dfcc"
          },
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.internet_gateway.aws_internet_gateway.gw",
            "module.nat_gateway.aws_nat_gateway.gw",
            "module.route_table_module.aws_route_table.example",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_asso[\"RTAss06\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0664c09249f46e6b3",
            "route_table_id": "rtb-0d2cd95b917e508ff",
            "subnet_id": "subnet-04d61e560915bca6d"
          },
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.internet_gateway.aws_internet_gateway.gw",
            "module.nat_gateway.aws_nat_gateway.gw",
            "module.route_table_module.aws_route_table.example",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module[\"RT01\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:577020030402:route-table/rtb-0bffbd62c8b5e6163",
            "id": "rtb-0bffbd62c8b5e6163",
            "owner_id": "577020030402",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df2ace38efff9280",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-093291a94ce50bee7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.internet_gateway.aws_internet_gateway.gw",
            "module.nat_gateway.aws_nat_gateway.gw",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module[\"RT02\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:577020030402:route-table/rtb-067496167b199555c",
            "id": "rtb-067496167b199555c",
            "owner_id": "577020030402",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-084b2bc92f2a7f3e4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-093291a94ce50bee7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.internet_gateway.aws_internet_gateway.gw",
            "module.nat_gateway.aws_nat_gateway.gw",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module[\"RT03\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:577020030402:route-table/rtb-093ef224fe4957aa5",
            "id": "rtb-093ef224fe4957aa5",
            "owner_id": "577020030402",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-069a665000ca224cb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-093291a94ce50bee7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.internet_gateway.aws_internet_gateway.gw",
            "module.nat_gateway.aws_nat_gateway.gw",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module[\"RT04\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:577020030402:route-table/rtb-0f6f401a2c976576a",
            "id": "rtb-0f6f401a2c976576a",
            "owner_id": "577020030402",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02f927922d8aa5146",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-093291a94ce50bee7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.internet_gateway.aws_internet_gateway.gw",
            "module.nat_gateway.aws_nat_gateway.gw",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_module[\"RT05\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:577020030402:route-table/rtb-0d2cd95b917e508ff",
            "id": "rtb-0d2cd95b917e508ff",
            "owner_id": "577020030402",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0628a4727ec126d82",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-093291a94ce50bee7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eip_module.aws_eip.nat",
            "module.internet_gateway.aws_internet_gateway.gw",
            "module.nat_gateway.aws_nat_gateway.gw",
            "module.subnet_module.aws_subnet.main",
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_module[\"lb_security_group\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:577020030402:security-group/sg-0ab92c2c38c0f708d",
            "description": "lb_security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab92c2c38c0f708d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lb_security_group",
            "name_prefix": "",
            "owner_id": "577020030402",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lb_security_group"
            },
            "tags_all": {
              "Name": "lb_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-093291a94ce50bee7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_module[\"public_security_group\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:577020030402:security-group/sg-059629c9783a92cbf",
            "description": "public_security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-059629c9783a92cbf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "public_security_group",
            "name_prefix": "",
            "owner_id": "577020030402",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_security_group"
            },
            "tags_all": {
              "Name": "public_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-093291a94ce50bee7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group_module[\"rds_security_group\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:577020030402:security-group/sg-03461c97c6427c449",
            "description": "rds_security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03461c97c6427c449",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_security_group",
            "name_prefix": "",
            "owner_id": "577020030402",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds_security_group"
            },
            "tags_all": {
              "Name": "rds_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-093291a94ce50bee7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module[\"app-subnet-1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:577020030402:subnet/subnet-08ae600c4d516dcb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ae600c4d516dcb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "577020030402",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-subnet-1"
            },
            "tags_all": {
              "Name": "app-subnet-1"
            },
            "vpc_id": "vpc-093291a94ce50bee7"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module[\"app-subnet-2\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:577020030402:subnet/subnet-0ebdec988d87b09aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebdec988d87b09aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "577020030402",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app-subnet-2"
            },
            "tags_all": {
              "Name": "app-subnet-2"
            },
            "vpc_id": "vpc-093291a94ce50bee7"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module[\"data-subnet-1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:577020030402:subnet/subnet-070c50cdba156dfcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070c50cdba156dfcc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "577020030402",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "data-subnet-1"
            },
            "tags_all": {
              "Name": "data-subnet-1"
            },
            "vpc_id": "vpc-093291a94ce50bee7"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module[\"data-subnet-2\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:577020030402:subnet/subnet-04d61e560915bca6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "192.168.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d61e560915bca6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "577020030402",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "data-subnet-2"
            },
            "tags_all": {
              "Name": "data-subnet-2"
            },
            "vpc_id": "vpc-093291a94ce50bee7"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module[\"web-subnet-1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:577020030402:subnet/subnet-0bc0350b143f05aa6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc0350b143f05aa6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "577020030402",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-subnet-1"
            },
            "tags_all": {
              "Name": "web-subnet-1"
            },
            "vpc_id": "vpc-093291a94ce50bee7"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module[\"web-subnet-2\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:577020030402:subnet/subnet-02ef6811f63d49e76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ef6811f63d49e76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "577020030402",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web-subnet-2"
            },
            "tags_all": {
              "Name": "web-subnet-2"
            },
            "vpc_id": "vpc-093291a94ce50bee7"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module[\"vpc1\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:577020030402:vpc/vpc-093291a94ce50bee7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0129caf5c607e2070",
            "default_route_table_id": "rtb-0c2004c45fec7b2af",
            "default_security_group_id": "sg-0dc8f00c1675957b2",
            "dhcp_options_id": "dopt-05111c027f0123f72",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-093291a94ce50bee7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c2004c45fec7b2af",
            "owner_id": "577020030402",
            "tags": {
              "Name": "vpc1"
            },
            "tags_all": {
              "Name": "vpc1"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_module[\"vpc2\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:577020030402:vpc/vpc-01aba5d7df58a985c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-09ff71b3ce932df99",
            "default_route_table_id": "rtb-021619d63016f53b4",
            "default_security_group_id": "sg-0e7f58f812310816e",
            "dhcp_options_id": "dopt-05111c027f0123f72",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01aba5d7df58a985c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-021619d63016f53b4",
            "owner_id": "577020030402",
            "tags": {
              "Name": "vpc2"
            },
            "tags_all": {
              "Name": "vpc2"
            }
          }
        }
      ]
    }
  ]
}